--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
