--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
     "@windmill/react-ui": "0.3.1",
+    "axios": "^0.21.1",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
     "faker": "4.1.0",
@@ -35,7 +36,7 @@
     "@release-it/conventional-changelog": "1.1.4",
     "@svgr/webpack": "5.4.0",
     "autoprefixer": "9.8.0",
-    "commitizen": "4.1.2",
+    "commitizen": "^4.2.4",
     "cross-env": "7.0.2",
     "cssnano": "4.1.10",
     "cz-conventional-changelog": "3.2.0",
