--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Windmill",
-  "name": "Windmill Dashboard React",
+  "short_name": "Gitdash",
+  "name": "Gitdash",
   "icons": [
     {
       "src": "favicon.ico",
